--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,18 +9,29 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lists.md",
+            "file": "Gen.md",
             "mode": "source"
           }
         }
       },
       {
-        "id": "20c5d15d064c3bcc",
+        "id": "53b63b94dc8497d7",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
             "file": "index.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "95e856cfeca318b7",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Lists.md",
             "mode": "source"
           }
         }
@@ -108,17 +119,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "20c5d15d064c3bcc",
+  "active": "53b63b94dc8497d7",
   "lastOpenFiles": [
     "index.md",
+    "Gen.md",
+    "Lists.md",
+    "Playbooks/Skyline.md",
     "Magistrate.md",
     "Moves.md",
-    "Lists.md",
     "Playbooks/Vault.md",
-    "Playbooks/Skyline.md",
     "Playbooks/Remnant.md",
     "Playbooks/Pillar.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Foundry.md"
+    "Playbooks/Conduit.md"
   ]
 }
