--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,29 +9,18 @@
         "state": {
           "type": "markdown",
           "state": {
+            "file": "Playbooks/Apparatus.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "cf56548c7d2ae659",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
             "file": "Gen.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "53b63b94dc8497d7",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "index.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "95e856cfeca318b7",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Lists.md",
             "mode": "source"
           }
         }
@@ -90,7 +79,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "index.md",
+                "file": "Gen.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -119,17 +108,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "53b63b94dc8497d7",
+  "active": "cf56548c7d2ae659",
   "lastOpenFiles": [
-    "index.md",
     "Gen.md",
+    "Playbooks/Apparatus.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Crossroads.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Clamor.md",
+    "index.md",
     "Lists.md",
     "Playbooks/Skyline.md",
-    "Magistrate.md",
-    "Moves.md",
-    "Playbooks/Vault.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Conduit.md"
+    "Magistrate.md"
   ]
 }
