--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,18 @@
     "type": "split",
     "children": [
       {
-        "id": "14fc58d5cc7f0dce",
+        "id": "b0fb73e741d547d9",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Remnant.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "b554c28a8aded659",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -15,23 +26,12 @@
         }
       },
       {
-        "id": "cc4ecc1412b3b2bb",
+        "id": "2ea03871fb6de26f",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ListofMoves.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "3156ec641e210add",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Moves.md",
+            "file": "Playbooks/Wellspring.md",
             "mode": "source"
           }
         }
@@ -90,7 +90,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Vault.md",
+                "file": "Playbooks/Wellspring.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -119,17 +119,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "14fc58d5cc7f0dce",
+  "active": "2ea03871fb6de26f",
   "lastOpenFiles": [
+    "Playbooks/Wellspring.md",
     "Playbooks/Vault.md",
-    "Moves.md",
-    "Magistrate.md",
-    "ListofMoves.md",
-    "Playbooks/Remnant.md",
     "Playbooks/Skyline.md",
+    "Playbooks/Remnant.md",
     "Playbooks/Pillar.md",
     "Playbooks/Foundry.md",
     "Playbooks/Crossroads.md",
-    "Playbooks/Conduit.md"
+    "Playbooks/Conduit.md",
+    "Playbooks/Apparatus.md",
+    "Playbooks/Clamor.md"
   ]
 }
