--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,34 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "b0fb73e741d547d9",
+        "id": "1afa6718a38f118a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Remnant.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "b554c28a8aded659",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Playbooks/Vault.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "998b3746ddc47dcb",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Moves.md",
+            "file": "Lists.md",
             "mode": "source"
           }
         }
@@ -90,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Vault.md",
+                "file": "Lists.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -119,17 +97,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b554c28a8aded659",
+  "active": "1afa6718a38f118a",
   "lastOpenFiles": [
+    "Lists.md",
+    "Moves.md",
     "Playbooks/Vault.md",
     "Playbooks/Remnant.md",
-    "Moves.md",
     "Playbooks/Wellspring.md",
     "Playbooks/Skyline.md",
     "Playbooks/Pillar.md",
     "Playbooks/Foundry.md",
     "Playbooks/Crossroads.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Apparatus.md"
+    "Playbooks/Conduit.md"
   ]
 }
