--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -8,5 +8,7 @@
     "margin": "0",
     "downscalePercent": 50
   },
-  "spellcheck": true
+  "spellcheck": true,
+  "legacyEditor": false,
+  "livePreview": true
 }
