--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,57 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lists.md",
-            "mode": "source"
+            "file": "Playbooks/Apparatus.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "78df9c4e182899ee",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Conduit.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "4f92423ffea2400c",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Remnant.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "b61bbfdc64952b3a",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Skyline.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "ec95019b08146e2a",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Wellspring.md",
+            "mode": "source",
+            "source": false
           }
         }
       }
@@ -68,7 +117,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Lists.md",
+                "file": "Playbooks/Wellspring.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,17 +146,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "1afa6718a38f118a",
+  "active": "ec95019b08146e2a",
   "lastOpenFiles": [
+    "Playbooks/Wellspring.md",
+    "Playbooks/Skyline.md",
+    "Playbooks/Remnant.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Apparatus.md",
     "Lists.md",
     "Moves.md",
     "Playbooks/Vault.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Wellspring.md",
-    "Playbooks/Skyline.md",
     "Playbooks/Pillar.md",
-    "Playbooks/Foundry.md",
-    "Playbooks/Crossroads.md",
-    "Playbooks/Conduit.md"
+    "Playbooks/Foundry.md"
   ]
 }
