--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,60 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "1afa6718a38f118a",
+        "id": "2e0eda59b0f23dee",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Apparatus.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "78df9c4e182899ee",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Playbooks/Conduit.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "4f92423ffea2400c",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Playbooks/Remnant.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "b61bbfdc64952b3a",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Playbooks/Skyline.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "ec95019b08146e2a",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Playbooks/Wellspring.md",
+            "file": "Moves.md",
             "mode": "source",
             "source": false
           }
@@ -117,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Wellspring.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -146,15 +98,15 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "ec95019b08146e2a",
+  "active": "2e0eda59b0f23dee",
   "lastOpenFiles": [
+    "Moves.md",
     "Playbooks/Wellspring.md",
+    "Playbooks/Conduit.md",
     "Playbooks/Skyline.md",
     "Playbooks/Remnant.md",
-    "Playbooks/Conduit.md",
     "Playbooks/Apparatus.md",
     "Lists.md",
-    "Moves.md",
     "Playbooks/Vault.md",
     "Playbooks/Pillar.md",
     "Playbooks/Foundry.md"
