--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,31 @@
     "type": "split",
     "children": [
       {
+        "id": "6bd3392717d3e437",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "index.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
         "id": "2e0eda59b0f23dee",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Rules.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "caeb233d455866d5",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -69,7 +93,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Moves.md",
+                "file": "Rules.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,15 +124,15 @@
   },
   "active": "2e0eda59b0f23dee",
   "lastOpenFiles": [
+    "Rules.md",
     "Moves.md",
+    "index.md",
+    "Lists.md",
+    "OldStuff.md",
     "Playbooks/Wellspring.md",
     "Playbooks/Conduit.md",
     "Playbooks/Skyline.md",
     "Playbooks/Remnant.md",
-    "Playbooks/Apparatus.md",
-    "Lists.md",
-    "Playbooks/Vault.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Foundry.md"
+    "Playbooks/Apparatus.md"
   ]
 }
