--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -16,12 +16,24 @@
         }
       },
       {
-        "id": "2e0eda59b0f23dee",
+        "id": "fcc72f06fb23d943",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Rules.md",
+            "file": "City.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "8b91d256bba88670",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Characters.md",
             "mode": "source",
             "source": false
           }
@@ -93,7 +105,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Rules.md",
+                "file": "City.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -122,17 +134,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "2e0eda59b0f23dee",
+  "active": "fcc72f06fb23d943",
   "lastOpenFiles": [
-    "Rules.md",
-    "Moves.md",
+    "City.md",
     "index.md",
+    "Characters.md",
+    "Moves.md",
     "Lists.md",
     "OldStuff.md",
     "Playbooks/Wellspring.md",
     "Playbooks/Conduit.md",
     "Playbooks/Skyline.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Apparatus.md"
+    "Playbooks/Remnant.md"
   ]
 }
