--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,30 +4,6 @@
     "type": "split",
     "children": [
       {
-        "id": "6bd3392717d3e437",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "index.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "fcc72f06fb23d943",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "City.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
         "id": "8b91d256bba88670",
         "type": "leaf",
         "state": {
@@ -105,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "City.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -134,17 +110,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "fcc72f06fb23d943",
+  "active": "caeb233d455866d5",
   "lastOpenFiles": [
-    "City.md",
-    "Characters.md",
-    "index.md",
     "Moves.md",
+    "Characters.md",
+    "Magistrate.md",
+    "City.md",
+    "index.md",
     "Lists.md",
     "OldStuff.md",
     "Playbooks/Wellspring.md",
     "Playbooks/Conduit.md",
-    "Playbooks/Skyline.md",
-    "Playbooks/Remnant.md"
+    "Playbooks/Skyline.md"
   ]
 }
