Updates to Introduction

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -101,14 +101,14 @@
   "active": "caeb233d455866d5",
   "lastOpenFiles": [
     "Introduction.md",
+    "Characters.md",
+    "Lists.md",
     "Safety.md",
     "Setting.md",
     "OldStuff.md",
     "Moves.md",
     "MagistrateGuide.md",
     "Magistrate.md",
-    "Lists.md",
-    "ListofMoves.md",
-    "index.md"
+    "ListofMoves.md"
   ]
 }
