--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "FirstSession.md",
+            "file": "Moves.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "FirstSession.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,15 +100,15 @@
   },
   "active": "caeb233d455866d5",
   "lastOpenFiles": [
+    "Moves.md",
+    "Magistrate.md",
     "FirstSession.md",
     "index.md",
-    "Magistrate.md",
     "MagistrateGuide.md",
     "Introduction.md",
     "Characters.md",
     "Lists.md",
     "Safety.md",
-    "Setting.md",
-    "OldStuff.md"
+    "Setting.md"
   ]
 }
