--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,24 @@
     "type": "split",
     "children": [
       {
-        "id": "caeb233d455866d5",
+        "id": "7cd51201e359ad3a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
             "file": "Magistrate.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "bf8878c08e42d94e",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Moves.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +52,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "Icon",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -49,7 +61,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -98,17 +111,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "caeb233d455866d5",
+  "active": "7cd51201e359ad3a",
   "lastOpenFiles": [
     "Magistrate.md",
     "Moves.md",
-    "City.md",
-    "Lists.md",
-    "FirstSession.md",
-    "Introduction.md",
-    "ListofMoves.md",
     "MagistrateGuide.md",
+    "Playbooks/Skyline.md",
+    "Playbooks/_Overview.md",
+    "ListofMoves.md",
+    "Lists.md",
     "index.md",
-    "Characters.md"
+    "Gen.md",
+    "FirstSession.md"
   ]
 }
