--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -52,7 +52,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "Icon",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -61,8 +61,7 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
