--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,19 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "7cd51201e359ad3a",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Magistrate.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "bf8878c08e42d94e",
+        "id": "9c96b6b320a230ce",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -81,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Magistrate.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,17 +98,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7cd51201e359ad3a",
+  "active": "9c96b6b320a230ce",
   "lastOpenFiles": [
-    "Magistrate.md",
-    "Moves.md",
-    "MagistrateGuide.md",
-    "Playbooks/Skyline.md",
     "Playbooks/_Overview.md",
-    "ListofMoves.md",
-    "Lists.md",
-    "index.md",
-    "Gen.md",
-    "FirstSession.md"
+    "Playbooks/Crossroads.md",
+    "Moves.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Clamor.md",
+    "Playbooks/Apparatus.md",
+    "Playbooks/_Remnant (OLD).md",
+    "MagistrateGuide.md",
+    "Magistrate.md"
   ]
 }
