--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Moves.md",
+            "file": "index.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Moves.md",
+                "file": "index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,15 +100,15 @@
   },
   "active": "9c96b6b320a230ce",
   "lastOpenFiles": [
+    "Playbooks/Apparatus.md",
+    "index.md",
+    "Moves.md",
     "Playbooks/_Overview.md",
     "Playbooks/Crossroads.md",
-    "Moves.md",
     "Playbooks/Foundry.md",
     "Playbooks/Conduit.md",
     "Playbooks/Clamor.md",
-    "Playbooks/Apparatus.md",
     "Playbooks/_Remnant (OLD).md",
-    "MagistrateGuide.md",
-    "Magistrate.md"
+    "MagistrateGuide.md"
   ]
 }
