--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "index.md",
+            "file": "Playbooks/Overview.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "index.md",
+                "file": "Playbooks/Overview.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,10 +100,10 @@
   },
   "active": "9c96b6b320a230ce",
   "lastOpenFiles": [
-    "Playbooks/Apparatus.md",
     "index.md",
+    "Playbooks/Apparatus.md",
     "Moves.md",
-    "Playbooks/_Overview.md",
+    "Playbooks/Overview.md",
     "Playbooks/Crossroads.md",
     "Playbooks/Foundry.md",
     "Playbooks/Conduit.md",
