--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "9c96b6b320a230ce",
+        "id": "a9e66c45ae2a6cfe",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Overview.md",
+            "file": "Magistrate.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Overview.md",
+                "file": "Magistrate.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -98,17 +98,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "9c96b6b320a230ce",
+  "active": "a9e66c45ae2a6cfe",
   "lastOpenFiles": [
-    "index.md",
-    "Playbooks/Apparatus.md",
-    "Moves.md",
     "Playbooks/Overview.md",
-    "Playbooks/Crossroads.md",
-    "Playbooks/Foundry.md",
+    "Playbooks/Skyline.md",
+    "Playbooks/Wellspring.md",
+    "Playbooks/Vault.md",
     "Playbooks/Conduit.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/_Remnant (OLD).md",
-    "MagistrateGuide.md"
+    "Playbooks/Remnant.md",
+    "Playbooks/Apparatus.md",
+    "Playbooks/Pillar.md",
+    "Playbooks/Foundry.md",
+    "index.md"
   ]
 }
