--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Apparatus.md",
+            "file": "index.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Apparatus.md",
+                "file": "index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,6 +100,7 @@
   },
   "active": "a9e66c45ae2a6cfe",
   "lastOpenFiles": [
+    "Playbooks/Apparatus.md",
     "Playbooks/Clamor.md",
     "Playbooks/Conduit.md",
     "Playbooks/Crossroads.md",
@@ -108,7 +109,6 @@
     "Playbooks/Pillar.md",
     "Playbooks/Remnant.md",
     "Playbooks/Skyline.md",
-    "Playbooks/Vault.md",
-    "Playbooks/Wellspring.md"
+    "Playbooks/Vault.md"
   ]
 }
