--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,19 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Overview.md",
+            "file": "Magistrate.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "abebac804903dc54",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Lists.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Overview.md",
+                "file": "Magistrate.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,15 +112,15 @@
   },
   "active": "a9e66c45ae2a6cfe",
   "lastOpenFiles": [
+    "Lists.md",
+    "Magistrate.md",
+    "Playbooks/Overview.md",
     "Playbooks/Apparatus.md",
     "index.md",
     "Playbooks/Clamor.md",
     "Playbooks/Conduit.md",
     "Playbooks/Crossroads.md",
     "Playbooks/Foundry.md",
-    "Playbooks/Overview.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Skyline.md"
+    "Playbooks/Pillar.md"
   ]
 }
