--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,24 +4,36 @@
     "type": "split",
     "children": [
       {
-        "id": "a9e66c45ae2a6cfe",
+        "id": "abebac804903dc54",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Magistrate.md",
+            "file": "Playbooks/Vault.md",
             "mode": "source",
             "source": false
           }
         }
       },
       {
-        "id": "abebac804903dc54",
+        "id": "0d3423f850833107",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lists.md",
+            "file": "Moves.md",
+            "mode": "source",
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "f4c62ad15638e220",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Remnant.md",
             "mode": "source",
             "source": false
           }
@@ -81,7 +93,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Magistrate.md",
+                "file": "Playbooks/Vault.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,17 +122,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a9e66c45ae2a6cfe",
+  "active": "abebac804903dc54",
   "lastOpenFiles": [
+    "Moves.md",
+    "Playbooks/Vault.md",
+    "Playbooks/Remnant.md",
+    "Playbooks/Skyline.md",
+    "Playbooks/Wellspring.md",
+    "Characters.md",
     "Lists.md",
     "Magistrate.md",
     "Playbooks/Overview.md",
-    "Playbooks/Apparatus.md",
-    "index.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Crossroads.md",
-    "Playbooks/Foundry.md",
-    "Playbooks/Pillar.md"
+    "Playbooks/Apparatus.md"
   ]
 }
