--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,19 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Skyline.md",
-            "mode": "source",
-            "source": false
-          }
-        }
-      },
-      {
-        "id": "4b58ed0f9033ede1",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Playbooks/Wellspring.md",
+            "file": "Playbooks/Remnant.md",
             "mode": "source",
             "source": false
           }
@@ -81,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Wellspring.md",
+                "file": "Playbooks/Remnant.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,17 +98,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "4b58ed0f9033ede1",
+  "active": "6c1da1dcf84d4d55",
   "lastOpenFiles": [
-    "Playbooks/Vault.md",
-    "Playbooks/Skyline.md",
-    "Playbooks/Remnant.md",
     "Playbooks/Pillar.md",
-    "Playbooks/Foundry.md",
     "Playbooks/Crossroads.md",
     "Playbooks/Conduit.md",
     "Playbooks/Clamor.md",
     "Playbooks/Apparatus.md",
-    "Moves.md"
+    "Gen.md",
+    "Playbooks/Wellspring.md",
+    "Characters.md",
+    "Playbooks/Skyline.md",
+    "Playbooks/Vault.md"
   ]
 }
