--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,28 +4,35 @@
     "type": "split",
     "children": [
       {
-        "id": "6c1da1dcf84d4d55",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Gen.md",
-            "mode": "source",
-            "source": false
+        "id": "f5715657a69b9307",
+        "type": "split",
+        "children": [
+          {
+            "id": "6c1da1dcf84d4d55",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "Characters.md",
+                "mode": "source",
+                "source": false
+              }
+            }
+          },
+          {
+            "id": "a170112ca487c530",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "Playbooks/Overview.md",
+                "mode": "source",
+                "source": false
+              }
+            }
           }
-        }
-      },
-      {
-        "id": "62ff8c887de9a960",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Lists.md",
-            "mode": "source",
-            "source": false
-          }
-        }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -81,7 +88,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Gen.md",
+                "file": "Characters.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +119,15 @@
   },
   "active": "6c1da1dcf84d4d55",
   "lastOpenFiles": [
-    "Moves.md",
-    "Gen.md",
-    "Characters.md",
     "Playbooks/Overview.md",
+    "Characters.md",
+    "ListofMoves.md",
     "Lists.md",
+    "Gen.md",
+    "Moves.md",
     "Playbooks/Remnant.md",
     "Playbooks/Pillar.md",
     "Playbooks/Crossroads.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Clamor.md"
+    "Playbooks/Conduit.md"
   ]
 }
