--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "91d620770ea5ce06",
+        "id": "73323b3ab73cf1f0",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ListofMoves.md",
+            "file": "MovesRevised.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ListofMoves.md",
+                "file": "MovesRevised.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -98,17 +98,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "91d620770ea5ce06",
+  "active": "73323b3ab73cf1f0",
   "lastOpenFiles": [
+    "Moves.md",
+    "MovesRevised.md",
+    "MoveExplorations.md",
+    "index.md",
+    "Advancement.md",
+    "Playbooks/Crossroads.md",
+    "ListofMoves.md",
     "MagistrateGuide.md",
     "Magistrate.md",
-    "Moves.md",
-    "ListofMoves.md",
-    "FirstSession.md",
-    "Playbooks/Overview.md",
-    "Characters.md",
-    "Lists.md",
-    "Gen.md",
-    "Playbooks/Remnant.md"
+    "FirstSession.md"
   ]
 }
