--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "73323b3ab73cf1f0",
+        "id": "46ad97e6b73372ad",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "MovesRevised.md",
+            "file": "index.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "MovesRevised.md",
+                "file": "index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -98,17 +98,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "73323b3ab73cf1f0",
+  "active": "46ad97e6b73372ad",
   "lastOpenFiles": [
-    "Moves.md",
+    "Introduction.md",
+    "DesignDiary/Diary001.md",
     "MovesRevised.md",
     "MoveExplorations.md",
-    "index.md",
-    "Advancement.md",
-    "Playbooks/Crossroads.md",
-    "ListofMoves.md",
     "MagistrateGuide.md",
     "Magistrate.md",
+    "Lists.md",
+    "ListofMoves.md",
+    "Gen.md",
     "FirstSession.md"
   ]
 }
